# fsync

./: .gitignore  Cargo.toml  Jenkinsfile  README.md
crates/fdrive-android/src/: lib.rs
crates/fdrive-core/: Cargo.toml
crates/fdrive-core/src/: config.rs  config_test.rs  engine.rs  engine_download.rs  engine_journal.rs  engine_ledger.rs  engine_test.rs  engine_upload.rs  lib.rs  model.rs  model_test.rs  scheduler.rs  sdk.rs
crates/fdrive-core/src/engine/: cache.rs  cache_test.rs  conflict.rs  conflict_test.rs  download.rs  download_test.rs  facade.rs  gates.rs  ledger.rs  ledger_test.rs  play.rs  play_test.rs  safety_test.rs  scheduler.rs  scheduler_test.rs  spawner.rs  state.rs  state_test.rs  testkit.rs  tests.rs  upload.rs  upload_test.rs  view.rs  view_test.rs
crates/fdrive-core/tests/: sdk.rs
crates/fdrive-ios/src/: lib.rs
crates/fdrive-linux/src/: adapter.rs  adapter_test.rs  args.rs  args_test.rs  gui.rs  gui_test.rs  lib.rs  main.rs  webview.rs  wire.rs  wire_test.rs
crates/fdrive-linux/tests/: adapter.rs
crates/fdrive-mac/: Cargo.toml  fuse_main.c
crates/fdrive-mac/macos/App/: MountManager.swift
crates/fdrive-mac/src/: lib.rs
crates/fdrive-windows/src/: adapter.rs  args.rs  config.rs  config_test.rs  gui.rs  main.rs  webview.rs  wire.rs  wire_test.rs
crates/fdrive-windows/src/wire/: viewer.rs  viewer_test.rs
crates/fsync-android/: Cargo.toml  uniffi.toml
crates/fsync-android/android/: settings.gradle.kts
crates/fsync-android/android/app/: build.gradle.kts
crates/fsync-android/android/app/src/main/: AndroidManifest.xml
crates/fsync-android/android/app/src/main/java/app/filestash/sync/: CredentialStore.kt  FilestashProvider.kt  MainActivity.kt  Native.kt  ShareActivity.kt
crates/fsync-android/android/app/src/main/java/app/filestash/sync/ui/: HomeScreen.kt  LoginScreen.kt  ShareScreen.kt  Theme.kt
crates/fsync-android/android/app/src/main/res/drawable/: ic_launcher_fg.xml
crates/fsync-android/android/app/src/main/res/values/: colors.xml  strings.xml
crates/fsync-android/src/: lib.rs
crates/fsync-android/tests/: adapter.rs
crates/fsync-core/: Cargo.toml
crates/fsync-core/src/: config.rs  config_test.rs  engine.rs  engine_test.rs  lib.rs  path.rs  path_test.rs  port.rs  scheduler.rs  sdk.rs
crates/fsync-core/tests/: sdk.rs
crates/fsync-ios/: Cargo.toml  uniffi.toml
crates/fsync-ios/ios/: .gitignore  project.yml
crates/fsync-ios/ios/App/: AppState.swift  DomainManager.swift  FilestashApp.swift  HomeView.swift  LoginView.swift  LoginWebView.swift  Theme.swift
crates/fsync-ios/ios/FileProvider/: FileProviderExtension.swift  FileProviderItem.swift
crates/fsync-ios/ios/Shared/: SessionStore.swift
crates/fsync-ios/src/: lib.rs
crates/fsync-ios/tests/: adapter.rs
crates/fsync-linux/: Cargo.toml
crates/fsync-linux/src/: adapter.rs  args.rs  gui.rs  gui_test.rs  lib.rs  log.rs  main.rs  webview.rs  webview_test.rs  wire.rs  xattr.rs  xattr_test.rs
crates/fsync-linux/tests/: adapter.rs
crates/fsync-mac/: Cargo.toml  fuse_main.c  uniffi.toml
crates/fsync-mac/macos/: project.yml
crates/fsync-mac/macos/App/: AppState.swift  DomainManager.swift  FilestashApp.swift  HomeView.swift  Info.plist  LoginView.swift  LoginWebView.swift  MountManager.swift  Theme.swift
crates/fsync-mac/macos/FileProvider/: FileProviderEnumerator.swift  FileProviderExtension.swift
crates/fsync-mac/macos/Shared/: AdapterHolder.swift  ItemMapping.swift  SessionStore.swift
crates/fsync-mac/src/: lib.rs
crates/fsync-mac/tests/: adapter.rs
crates/fsync-windows/: Cargo.toml  build.rs
crates/fsync-windows/src/: adapter.rs  args.rs  config.rs  gui.rs  log.rs  main.rs  webview.rs  wire.rs
crates/fsync-windows/src/wire/: shell.rs  viewer.rs  watcher.rs
scripts/: ios-build.sh  linux-e2e.sh  mac-build.sh  windows-e2e.ps1
