[package]
name = "fsync-linux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fsync"
path = "src/main.rs"

[dependencies]
fsync-core = { path = "../fsync-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }
futures-util = { version = "0.3", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
regex = "1"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
fuser = { version = "0.17", default-features = false }
libc = "0.2"
gtk = "0.15"
libayatana-appindicator = "0.2"
glib = { version = "0.15", features = ["v2_50"] }

[dev-dependencies]
httpmock = "0.7"
