[package]
name = "fsync-mac"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
fsync-core = { path = "../fsync-core" }
uniffi = { version = "0.29", features = ["cli"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false }
thiserror = "2"
serde_json = "1"
log = "0.4"

[dev-dependencies]
httpmock = "0.7"
serde_json = "1"

[[bin]]
name = "uniffi-bindgen-swift"
path = "src/bin/uniffi-bindgen.rs"
