[package]
name = "fsync-mac"
version = "0.1.0"
edition = "2021"

[lib]
name = "fsync_mac"
crate-type = ["cdylib"]

[dependencies]
fsync-core = { path = "../fsync-core" }
tokio = { version = "1", features = ["rt-multi-thread"] }
futures-util = { version = "0.3", default-features = false }
libc = "0.2"
